# statisk

./: .gitignore  CHANGELOG.md  Cargo.toml  Gemfile  Guardfile  LICENSE.txt  README.md  action.yml  build.rs  statisk.gemspec
.github/workflows/: pipeline.yml
example/: .gitignore  statisk.lua  statisk.toml
example/content/pages/: _common.typ  about.dj  about.kladd  index.dj  test.typ
example/css/: _layout.css  styles.css
example/site/styles/: styles.scss
example/site/templates/: base.jinja  navbar.jinja
example/templates/: 404.html  _base.html  _base.jinja  _footer.jinja  _navbar.html  base.jinja  index.html  index.jinja  sitemap.xml
example/templates/pages/: [page].jinja
lib/: statisk.rb
lib/statisk/: cli.rb  helpers.rb  version.rb
lib/statisk/commands/: build.rb  init.rb  new.rb
src/: asset.rs  build_mode.rs  cli.rs  compress.rs  config.rs  constants.rs  content.rs  context.rs  context_builder.rs  events.rs  frontmatter.rs  ignorer.rs  jotdown.rs  livereload.js  lua.rs  main.rs  meta.rs  minify.rs  paths.rs  render.rs  server.rs  sitemap.rs  statisk_config.rs  templating.rs  typst.rs  utils.rs  watcher.rs
src/lua/: file_builder.rs  output.rs  path_config.rs  public_file_builder.rs  statisk.rs  template_builder.rs
src/snapshots/: statisk__minify__tests__minify_html.snap  statisk__sitemap__tests__sitemap.snap
test/: statisk_test.rb  test_helper.rb
