[package]
authors = ["Sondre Aasemoen <sondre@eons.io>"]
description = "A simple and opinionated static site generator"
documentation = "https://github.com/sondr3/statisk"
homepage = "https://github.com/sondr3/statisk"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/sondr3/statisk"
build = "build.rs"
name = "statisk"
version = "0.2.4"
edition = "2024"

[dependencies]
ahash = "0.8.11"
anyhow = "1.0.97"
astra = "0.4.0"
brotli = "7.0.0"
clap = { version = "4.5.35", features = ["derive"] }
clap_complete = "4.5.47"
dashmap = { version = "6.1.0", features = ["serde"] }
flate2 = "1.1.1"
flume = { version = "0.11.1", default-features = false }
http = "1.3.1"
jiff = { version = "0.2.5", features = ["serde"] }
jotdown = "0.7.0"
lightningcss = { version = "1.0.0-alpha.65", default-features = false, features = ["browserslist", "bundler", "grid"] }
minijinja = { version = "2.9.0", features = ["loader", "speedups", "preserve_order"] }
minijinja-autoreload = "2.9.0"
minijinja-contrib = { version = "2.9.0", features = ["datetime", "timezone", "rand", "wordcount", "wordwrap", "unicode_wordwrap"] }
new_mime_guess = "4.0.4"
oxc_minifier = "0.62.0"
oxc_allocator = "0.62.0"
oxc_codegen = "0.62.0"
oxc_mangler = "0.62.0"
oxc_parser = "0.62.0"
oxc_span = "0.62.0"
notify = "8.0.0"
serde = { version = "1.0.219", features = ["derive"] }
sha1_smol = { version = "1.0.1", features = ["std"] }
simple-minify-html = { version = "0.17.0", features = ["css", "js"] }
time = { version = "0.3.41", features = ["serde-human-readable", "local-offset"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
tungstenite = "0.26.2"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
insta = { version = "1.42.2", features = ["toml"] }

[build-dependencies]
clap = { version = "4.5.35", features = ["derive"] }
clap_complete = "4.5.47"
clap_mangen = "0.2.26"

[profile.dev.package]
insta.opt-level = 3
